# pkpd

./: .coveragerc  README.md  TestRun.py  prototype.py  pyproject.toml
.github/workflows/: coverage.yml  os_tests.yml  pkpd_ci.yml  unit_tests.yml
archive/: prototype.py
docs/: conf.py  index.rst
pkmodel/: model.py
pkmodel_EmFaGeHoJe/: __init__.py  model.py  solution.py
pkmodel_EmFaGeHoJe/tests/: test_model.py  test_solution.py
