[tool.poetry]
name = "pkpd"
version = "0.1.0"
description = "Pharmokinetics modelling project to solve and visualise the solution of a PK model"
authors = ["Emily Jin, Fabian Spoendlin, Gemma Gordon, Hongyu Qian, Jesse Murray"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
